[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/img/Mare.png" type="Texture" id=2]
[ext_resource path="res://buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://buttons/LoadButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://buttons/ExitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/zombie_PNG64.png" type="Texture" id=6]
[ext_resource path="res://fonts/feast_of_flesh_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://audio/MenuMusic.wav" type="AudioStream" id=8]



[node name="TitleScreen" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 82.0
margin_right = 1160.0
margin_bottom = 682.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="Logo" type="TextureRect" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1040.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 4
_sections_unfolded = [ "Margin" ]

[node name="CenterRow" type="HBoxContainer" parent="Menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 274.0
margin_right = 1040.0
margin_bottom = 535.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 364.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" index="0" instance=ExtResource( 3 )]

margin_top = 20.0
margin_right = 364.0
margin_bottom = 80.0
rect_min_size = Vector2( 360, 60 )
_sections_unfolded = [ "Mouse", "Rect", "custom_fonts" ]

[node name="LoadButton" parent="Menu/CenterRow/Buttons" index="1" instance=ExtResource( 4 )]

margin_top = 100.0
margin_right = 364.0
margin_bottom = 160.0
rect_min_size = Vector2( 360, 60 )
_sections_unfolded = [ "Rect" ]

[node name="ExitButton" parent="Menu/CenterRow/Buttons" index="2" instance=ExtResource( 5 )]

margin_top = 180.0
margin_right = 364.0
margin_bottom = 240.0
rect_min_size = Vector2( 360, 60 )
_sections_unfolded = [ "Rect" ]

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 368.0
margin_right = 1040.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Characters" type="TextureRect" parent="Menu/CenterRow/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 672.0
margin_bottom = 261.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="VersionLabel" type="Label" parent="Menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 539.0
margin_right = 1040.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Â© 2019 Thunder Struck Games. All Rights Reserved"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="MenuAudio" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 8 )
volume_db = -9.02
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]

[connection signal="pressed" from="Menu/CenterRow/Buttons/LoadButton" to="." method="_on_LoadButton_pressed"]

[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]


